--- a/architectural design specification latex/tex/y_layer_subsystems.tex
+++ b/architectural design specification latex/tex/y_layer_subsystems.tex
@@ -143,8 +143,8 @@ This section will validate format and types of input from user. It will reject t
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#17 & UI validation & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#18 & UI validation & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#17 & Business Controller / UI validation & \pbox{3cm}{item information } & \pbox{3cm}{N/A}  \\ \hline
+    \#18 & UI validation & \pbox{3cm}{N/A} & \pbox{3cm}{Success}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
