--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -193,8 +193,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#7 & Add Item page & \pbox{3cm}{Item name,date,brand} & \pbox{3cm}{Item Information}  \\ \hline
-    \#8 & Add Item page & \pbox{3cm}{N/A} & \pbox{3cm}{msg from the controller}  \\ \hline
+    \#7 & Add Item/ UI Controller & \pbox{3cm}{name,Expiration \\ brand,\\ Quantity,Price} & \pbox{3cm}{N/A}  \\ \hline
+    \#8 & Add Item page & \pbox{3cm}{N/A} & \pbox{3cm}{Item add successfull \\ Item add fail}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
